--- a/css/main.css
+++ b/css/main.css
@@ -1942,7 +1942,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #06ff6c;
+  background: #a2e01b;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3024,6 +3024,10 @@ hr {
     text-align: center;
   }
 }
-body {
-  background: url("/img/background.jpg");
+.post {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  padding: 25px;
+  -webkit-box-shadow: 0 0 5px rgba(202,203,203,0.5);
+  -moz-box-shadow: 0 0 5px rgba(202,203,204,0.5);
 }
