--- a/css/main.css
+++ b/css/main.css
@@ -1943,7 +1943,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #536a37;
+  background: #49ffff;
 }
 .links-of-blogroll {
   font-size: 13px;
